--- a/presenter/img.html
+++ b/presenter/img.html
@@ -187,6 +187,6 @@ pybossa.presentTask(function(task, deferred) {
     }
 });
 
-pybossa.run('test7');
+pybossa.run('test11_img');
 })();
 </script>
