refactor the code

--- a/presenter/img.html
+++ b/presenter/img.html
@@ -186,3 +186,7 @@ pybossa.presentTask(function(task, deferred) {
         pybossaNotify("Thanks! You have participated in all available tasks. Enjoy some of your time!", true, "info");
     }
 });
+
+pybossa.run('imglabel');
+})();
+</script>
