implement unparallel quicksort

--- a/presenter/compare.html
+++ b/presenter/compare.html
@@ -5,16 +5,16 @@
 -->
 <div class="row skeleton"> <!-- Start Skeleton Row-->
     <div class="col-md-6 "><!-- Start of Question and Submission DIV (column) -->
-        <h1 id="question"><span id="i18n_question">Do you see a human face in this photo?</span></h1> <!-- The question will be loaded here -->
+        <h1 id="question"><span id="i18n_question">Which one is larger?</span></h1> <!-- The question will be loaded here -->
         <div id="answer"> <!-- Start DIV for the submission buttons -->
             <!-- If the user clicks this button, the saved answer will be value="yes"-->
-            <button class="btn btn-success btn-answer" value='Yes'><i class="icon icon-white icon-thumbs-up"></i> <span id="i18n_yes">Yes</span></button>
+            <button class="btn btn-success btn-answer" value='Up'><i class="icon icon-white icon-thumbs-up"></i> Up</button>
             <!-- If the user clicks this button, the saved answer will be value="no"-->
-            <button class="btn btn-danger btn-answer" value='No'><i class="icon icon-white icon-thumbs-down"></i> No</button>
+            <button class="btn btn-danger btn-answer" value='Down'><i class="icon icon-white icon-thumbs-down"></i> Down</button>
             <!-- If the user clicks this button, the saved answer will be value="NoPhoto"-->
-            <button class="btn btn-answer" value='NoPhoto'><i class="icon icon-exclamation"></i> <span id="i18n_no_photo">No photo</span></button>
+            <!-- <button class="btn btn-answer" value='NoPhoto'><i class="icon icon-exclamation"></i> <span id="i18n_no_photo">No photo</span></button> -->
             <!-- If the user clicks this button, the saved answer will be value="NotKnown"-->
-            <button class="btn btn-answer" value='NotKnown'><i class="icon icon-white icon-question-sign"></i> <span id="i18n_i_dont_know">I don't know</span></button>
+            <!-- <button class="btn btn-answer" value='NotKnown'><i class="icon icon-white icon-question-sign"></i> <span id="i18n_i_dont_know">I don't know</span></button> -->
         </div><!-- End of DIV for the submission buttons -->
         <!-- Feedback items for the user -->
         <p><span id="i18n_working_task">You are working now on task:</span> <span id="task-id" class="label label-warning">#</span></p>
@@ -37,7 +37,10 @@
         <div id="disqus_thread" style="margin-top:5px;display:none"></div>
     </div><!-- End of Question and Submission DIV (column) -->
     <div class="col-md-6"><!-- Start of Photo DIV (column) -->
-        <a id="photo-link" href="#">
+        <a id="photo-link1" href="#">
+            <img id="photo" src="http://i.imgur.com/GeHxzb7.png" style="max-width=100%">
+        </a>
+        <a id="photo-link2" href="#">
             <img id="photo" src="http://i.imgur.com/GeHxzb7.png" style="max-width=100%">
         </a>
     </div><!-- End of Photo DIV (columnt) -->
@@ -85,7 +88,7 @@ var messages = {"en": {
                         "i18n_tasks_from": "tasks from",
                         "i18n_show_comments": "Show comments:",
                         "i18n_hide_comments": "Hide comments:",
-                        "i18n_question": "Do you see a human face in this photo?",
+                        "i18n_question": "Which one is larger?",
                       },
                 "es": {
                         "i18n_welldone": "Bien hecho!",
@@ -137,16 +140,26 @@ function loadUserProgress() {
 pybossa.taskLoaded(function(task, deferred) {
     if ( !$.isEmptyObject(task) ) {
         // load image from flickr
-        var img = $('<img />');
-        img.load(function() {
+        console.log(task)
+        var img1 = $('<img />');
+        var img2 = $('<img />');
+        img1.load(function() {
             // continue as soon as the image is loaded
             deferred.resolve(task);
             pybossaNotify("", false, "loading");
         });
-        console.log(task.info.url_b);
-        img.attr('src', task.info.url_b).css('height', 460);
-        img.addClass('img-thumbnail');
-        task.info.image = img;
+        img2.load(function() {
+            // continue as soon as the image is loaded
+            deferred.resolve(task);
+            pybossaNotify("", false, "loading");
+        });
+        // console.log(task.info.url_b);
+        img1.attr('src', task.info.pic1).css('height', 460);
+        img1.addClass('img-thumbnail');
+        img2.attr('src', task.info.pic2).css('height', 460);
+        img2.addClass('img-thumbnail');
+        task.info.image1 = img1;
+        task.info.image2 = img2;
     }
     else {
         console.log("123");
@@ -158,7 +171,8 @@ pybossa.presentTask(function(task, deferred) {
     if ( !$.isEmptyObject(task) ) {
         loadUserProgress();
         i18n_translate();
-        $('#photo-link').html('').append(task.info.image);
+        $('#photo-link1').html('').append(task.info.image1);
+        $('#photo-link2').html('').append(task.info.image2)
         // $("#photo-link").attr("href", task.info.link);
         $('#task-id').html(task.id);
         $('.btn-answer').off('click').on('click', function(evt) {
