Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 <h3>
 <a id="documents" class="anchor" href="#documents" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Documents:</h3>
 
+<p><a href="https://raw.githubusercontent.com/sfu-db/reprowd/master/docs/devguide.md?token=APKoA1WzjASqClGHiIWdZClUmezvcwopks5XsMCgwA%3D%3D">Developer Guide</a></p>
+
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
