--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <ul>
   <li><a href="install.html">Installation and setting Instructions</a></li>
   <li><a href="dev_guide.html">Developer Guide</a></li>
-  <li><a href="http://reprowd.readthedocs.io/en/latest/">Reprowd Documentation</a></li>
+  <li><a href="docs/_build/html">Reprowd Documentation</a></li>
 </ul>
 
     <footer>
