final version (I guess)

--- a/dev_guide.html
+++ b/dev_guide.html
@@ -102,8 +102,9 @@
 
 <h2 id="contact">Contact</h2>
 
-<p><a href="jnwang@sfu.ca">Jiannan Wang</a>
-<a href="ruochenj@sfu.ca">Ruochen Jiang</a></p>
+<p><a href="jnwang@sfu.ca">Jiannan Wang</a></p>
+
+<p><a href="ruochenj@sfu.ca">Ruochen Jiang</a></p>
 
     <footer>
   Reprowd is maintained by <a href="https://github.com/sfu-db">sfu-db</a><br>
