--- a/index.html
+++ b/index.html
@@ -36,10 +36,15 @@
 
 <h1 id="documents">Documents:</h1>
 
+<h2 id="user-guide">User Guide</h2>
 <ul>
-  <li><a href="install.html">Installation and setting Instructions</a></li>
+  <li><a href="install.html">Installation and Setting Instructions</a></li>
+  <li><a href="http://reprowd.readthedocs.io/en/latest/">Reprowd Documentation</a></li>
+</ul>
+
+<h2 id="want-to-be-a-contributor">Want to be a contributor?</h2>
+<ul>
   <li><a href="dev_guide.html">Developer Guide</a></li>
-  <li><a href="docs/_build/html">Reprowd Documentation</a></li>
 </ul>
 
     <footer>
