--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h2 id="user-guide">User Guide</h2>
 <ul>
   <li><a href="install.html">Installation and Setting Instructions</a></li>
-  <li><a href="http://reprowd.readthedocs.io/en/latest/">Reprowd Documentation</a></li>
+  <li><a href="docs/_build/html">Reprowd Documentation</a></li>
 </ul>
 
 <h2 id="want-to-be-a-contributor">Want to be a contributor?</h2>
