fix some tiny things

--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
   <section class = "main-content">
     <h1 id="welcome">Welcome</h1>
 
-<p>Reprowd is a system making crowdsourced data process reproducible</p>
-
-<h1 id="documents">Documents:</h1>
+<p>Reprowd is a system aiming to make it easy to reproduce crowdsourced data processing research.</p>
 
 <h2 id="user-guide">User Guide</h2>
 <ul>
