--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <h2 id="user-guide">User Guide</h2>
 <ul>
-  <li><a href="install.html">Installation and Setting Instructions</a></li>
+  <li><a href="install.html">Downloading and Installation</a></li>
   <li><a href="docs/_build/html">Reprowd Documentation</a></li>
 </ul>
 
