--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <h2 id="user-guide">User Guide</h2>
 <ul>
   <li><a href="install.html">Downloading and Installation</a></li>
-  <li><a href="docs/_build/html">Reprowd Documentation</a></li>
+  <li><a href="docs/html">Reprowd Documentation</a></li>
 </ul>
 
 <h2 id="want-to-be-a-contributor">Want to be a contributor?</h2>
