--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
 <ul>
   <li><a href="install.html">Downloading and Installation</a></li>
   <li><a href="docs/html">Reprowd Documentation</a></li>
+  <li><a href="https://groups.google.com/forum/#!forum/reprowd">Reprowd Mailing List</a></li>
+</ul>
+
+<h2 id="applications">Applications</h2>
+<ul>
+  <li><a href="https://github.com/sfu-db/reprowd/blob/master/reprowd/examples/image_label.py">Image Labeling</a></li>
+  <li><a href="https://github.com/sfu-db/reprowd/blob/master/reprowd/examples/quicksort.py">Human-powered Sort</a></li>
+  <li><a href="https://github.com/sfu-db/reprowd/blob/master/reprowd/examples/deduplication.py">Deduplicatin</a></li>
+  <li><a href="https://github.com/sfu-db/reprowd/blob/master/reprowd/examples/record_linkage.py">Record Linkage</a></li>
 </ul>
 
 <h2 id="want-to-be-a-contributor">Want to be a contributor?</h2>
