--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 <h2 id="user-guide">User Guide</h2>
 <ul>
   <li><a href="install.html">Downloading and Installation</a></li>
-  <li><a href="docs/html">Reprowd Documentation</a></li>
-  <li><a href="https://groups.google.com/forum/#!forum/reprowd">Reprowd Mailing List</a></li>
+  <li><a href="docs/html">Documentation</a></li>
+  <li><a href="https://groups.google.com/forum/#!forum/reprowd">Mailing List</a></li>
 </ul>
 
 <h2 id="applications">Applications</h2>
